Fixed spacing between headers on FAQ and About Us and the navbar.

--- a/src/pages/FAQ.css
+++ b/src/pages/FAQ.css
@@ -1,4 +1,5 @@
 .FAQ-container {
+  margin-top: 10rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
